[package]
name = "serde_aws_query_ce"
version = "0.1.0"
description = "Serde support for AWS Query protocol"
edition = "2021"
authors = ["Maksim Dadzerkin <maksim.dadzerkin@gmail.com>"]
categories = ["encoding", "web-programming"]
keywords = ["serde", "serialization", "smithy", "aws", "querystring"]
readme = "README.md"
exclude = [".github", "target", "Cargo.lock"]
license = "Apache-2.0"

[dependencies]
serde = "1.0"
form_urlencoded = "1.2"
aws-smithy-types = "1.0"
log = "0.4.20"

[dev-dependencies]
serde_derive = "1.0"
serde_urlencoded = "0.7"
serde_with = "3.4"
